| Summary: | ASTERISK-20404: sound_only_one gets ignored when there are CONFBRIDGE() settings in the dialplan | ||||
| Reporter: | univ (univ) | Labels: | |||
| Date Opened: | 2012-09-10 18:44:44 | Date Closed: | 2012-09-26 11:51:31 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_confbridge | ||
| Versions: | 10.7.1 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | CentOS release 5.8 (Final) on KVM. Linux voip02 2.6.18-308.13.1.el5 #1 SMP Tue Aug 21 17:10:18 EDT 2012 x86_64 x86_64 x86_64 GNU/Linux | Attachments: | ( 0) ASTERISK-20404-10.diff | ||
| Description: | When specifying CONFBRIDGE() settings in the dialplan, "sound_only_one" seems to be the only setting that gets ignored. [chatfire-internal-bridge] type=bridge record_conference=yes sound_has_joined=/var/lib/asterisk/sounds/chatfire_betritt_konferenz_6 sound_has_left=/var/lib/asterisk/sounds/chatfire_konferenz_verlassen_6 sound_only_person=/var/lib/asterisk/sounds/chatfire_erster_anrufer_6 sound_only_one=/var/lib/asterisk/sounds/chatfire_zu_zweit sound_there_are=/var/lib/asterisk/sounds/chatfire_es_befinden_sich_derzeit_6 sound_other_in_party=/var/lib/asterisk/sounds/chatfire_anrufer_in_der_besprechung_6 sound_get_pin=/var/lib/asterisk/sounds/chatfire_intro_6 exten => 06,1,Answer() exten => 06,n,Set(CHANNEL(language)=chatfire) exten => 06,n,Set(CONFBRIDGE(user,template)=chatfire-internal-user) exten => 06,n,Set(CONFBRIDGE(bridge,template)=chatfire-internal-bridge) exten => 06,n,Set(CONFBRIDGE(bridge,record_file)=/tmp/chatfire-${STRFTIME(,,%C%y%m%d%H%M)}.wav) exten => 06,n,ConfBridge(22*68*39*09,,,chatfire-internal-menu) exten => 06,n,Hangup() Result: chatfire_zu_zweit doesn't get played, all the other sounds work as expected though. Instead auth-onlyone is being played. I've tried to set exten => 06,n,Set(CONFBRIDGE(bridge,sound_only_one)=/var/lib/asterisk/sounds/chatfire_zu_zweit) but that doesn't change anything. Workaround: copy chatfire_zu_zweit to auth-onlyone. Why I believe this is a bug is because the following works just fine: [chatfire-public-bridge] type=bridge sound_only_person=/var/lib/asterisk/sounds/chatfire_0_chatter_anwesend_1_2_5 sound_only_one=/var/lib/asterisk/sounds/chatfire_zu_zweit sound_there_are=/var/lib/asterisk/sounds/chatfire_viel_spass_telefonchat_es_sind_derzeit_1_2_5 sound_other_in_party=/var/lib/asterisk/sounds/chatfire_weitere_user_anwesend_1_2_5 exten => go-conference,1,Answer() exten => go-conference,n,Set(CHANNEL(language)=chatfire) exten => go-conference,n,ConfBridge(12*48*79*32,chatfire-public-bridge,chatfire-public-user,chatfire-public-menu) Thank you! | ||||
| Comments: | By: Matt Jordan (mjordan) 2012-09-11 08:27:57.650-0500 Can you try the attached patch and see if it resolves the issue for you? | ||||