Merged revisions 373196 via svnmerge from file:///srv/subversion/repos/asterisk/branches/10

........
  r373196 | mjordan | 2012-09-19 21:35:13 -0500 (Wed, 19 Sep 2012) | 12 lines
  
  Ensure that all ConfBridge sounds can be set using CONFBRIDGE function
  
  The CONFBRIDGE function can be used to set the sounds in a ConfBridge
  bridge profile.  Unfortunately, three sounds were missed in the portion
  of the code that applies the settings passed in from the function:
  sound_only_one, join, and leave.  This patch makes sure that the sounds
  passed from the function are applied to the bridge profile.
  
  (closes issue ASTERISK-20404)
  Reported by: univ
  Tested by: mjordan
........


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/10-digiumphones@373201 65c4cc65-6c06-0410-ace0-fbb531ad65f3